# royalspells

./: .gitignore  README.md  pyproject.toml  setup.py
royalspells/: buffs.py  formulas.py  mixins.py  spells.py
